--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cultural Analytics Visual Essay</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <section id="title">
             <div class="center">
                 <div class="container">
-                    <img id="img1" src="./images/influencer.jpeg" alt="Influencer Image">
+                    <img id="img1" src="./images/Influencer.jpeg" alt="Influencer Image">
                     <h1>How does cuisine impact language used for reviews?</h1>
                 </div>
                 <h2 id="h2">A cultural analysis by Ryan Lin and Noah Lian</h2>
@@ -70,7 +70,7 @@
             <button onclick="showSection('title')">Restart</button>
         </section>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
