minor scroll change

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <h1>How does cuisine impact language used for reviews?</h1>
                 </div>
                 <h2 id="h2">A cultural analysis by Ryan Lin and Noah Lian</h2>
+                <h2 id = "h2"> Last updated 5/3/2024</h2>
                 <button id="button1" onclick="showSection('Setup')">Get Started</button>
             </div>
         </section>
